Initial commit for Deploy_to_VMSS branch

--- a/azure-vote/config_file.cfg
+++ b/azure-vote/config_file.cfg
@@ -3,3 +3,5 @@ TITLE = 'Azure Voting App'
 VOTE1VALUE = 'Cats'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
+CONNECTION_STRING = 'InstrumentationKey=584c2428-5fa5-4f94-bbd6-0e146d711472'
+INSTRUMENTATION_KEY = '584c2428-5fa5-4f94-bbd6-0e146d711472'
